--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
-  "name": "dating",
+  "name": "",
   "version": "1.0.0",
-  "description": "Dating App",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JCyberAI/whoiswho.git"
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JCyberAI/whoiswho/issues"
-  },
-  "homepage": "https://github.com/JCyberAI/whoiswho#readme",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^4.4.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.12.3",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "concurrently": "^6.0.0",
-    "nodemon": "^2.0.7"
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
+    "express": "^4.16.4",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.11",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "validator": "^10.9.0"
   }
 }
